css/search-filters.css
/* ... */
.filterLabel {
    padding-bottom: 4px;
    padding-top: 4px;
}
.filterLabelMain {
    display: none;
}
@media (max-width: 600px) {
  .filterLabelMainXX {
    clear: both;
    display: block;
    float: left;
    width: 100px;
  }
}
.filterBubble {
    -webkit-transition: 0.3s ease-in-out;
    -moz-transition: 0.3s ease-in-out;
    -o-transition: 0.3s ease-in-out;
    transition: 0.3s ease-in-out;
    -webkit-transition-property: width;
    -moz-transition-property: width;
    -o-transition-property: width;
    transition-property: width;
    display: block;
    -webkit-box-shadow: 0px 2px 8px rgba(0,0,0,0.15);
    -moz-box-shadow: 0px 2px 8px rgba(0,0,0,0.15);
    box-shadow: 0px 2px 8px rgba(0,0,0,0.15);
    border-radius: 6px;
    border: 1px solid #d0d5cb;
    position: absolute;
    z-index: 1001; /* to cover map zoom */
    font-size: 15px;
    line-height: 1.5;
    background: #fff;
    padding: 15px;
    vertical-align: baseline;
    pointer-events: auto; /* catch click through to keep open location filter */
}
.dark .filterBubble {
  background: #555;
}

.hideAdvanced {
  pointer-events: auto; /* catch click through to keep open location filter */
  z-index: 1000;
}
#geoListHolder {
    overflow: hidden;
}
.listHolderFooterX {
  position:absolute;
  bottom:0;
  left:0px;
  right:0px;
  margin-top:5px;
  padding-left: 30px;
  z-index:2;
}
#geomap {
  width:700px;
  height:520px; /* Optimal for gstate zoom */
  position: relative;
}
#geomapHolder {
  float:left;
  position: relative;
}
#geomapHolder .hideAdvanced.close-X {
  position: absolute;
  top: 6px;
  right: 8px;
  padding: 0;
  margin: 0;
  font-size: 14px;
  color: #555;
  width: 22px;
  height: 22px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  background: rgba(255, 255, 255, 0.5);
  z-index: 1000;
}
.dark #geomapHolder .hideAdvanced.close-X {
  background: rgba(34, 34, 34, 0.5);
  color: #fff;
}
@media (max-width: 1350px) {
  #geomapHolder, #geomap {
    width:700px;
  }
}
@media (max-width: 1150px) {
  #geomapHolder, #geomap {
    width:500px;
  }
}
.bodyLeftMargin #geomapHolder {
  width:50%;
}
.bodyLeftMargin #geomap {
  width:100%;
}
@media (max-width: 1000px) {
  #geomapHolder, #geomap {
    width: 100%;
    margin-right: 30px;
  }
  #geoListHolder, .listHolderFooter {
    padding-left: 0px;
    padding-right: 0px;
  }
  #geomapHolder {
    float: none;
  }
}

.mobileView #geomapHolder, .mobileView #geomap {
  width: 100%;
}
.mobileView #geomapHolder {
  padding-right: 30px;
  padding-bottom: 20px;
}
.mobileView #geoListHolder, .mobileView .listHolderFooter {
  padding-left: 0px;
}
.mobileView #geomapHolder {
  float: none;
}
.bodyLeftMarginList #geomapHolder, .bodyLeftMarginList #geomap {
  width: 100%;
}
.bodyLeftMarginList #geomapHolder {
  padding-right: 30px;
  padding-bottom: 20px;
}
.bodyLeftMarginList #geoListHolder, .bodyLeftMarginList .listHolderFooter {
  padding-left: 0px;
}
.bodyLeftMarginList #geomapHolder {
  float: none;
}

.close-X {
  cursor:pointer;
  padding:7px 26px 15px 26px;
  font-size:23px;
  color:#bbb;
}
#honeycombPanel {
    text-align: center;
    margin:0 auto;
}
.bigThumbWidth { /* allows margin to reside within percent */
    floatX:left;
    position: relative;
}
.bigThumbWidthXXXX:after {
  content: "";
  display: block;
  padding-bottomX: 100%;
}
.bigThumbUl {
    margin: 0px;
    list-style-type: none;
    /*
    padding-right: -30px;
    border:1px solid #fff;
    */
}
.bigThumbHolder {
    width: 100%;
    height: 180px;
    position: absolute;
    float: left;
    text-align: center;
    color: #777;
}
.bigThumbHolder:hover {
  color: #333;

}

.bigThumbHolder a:link {
  color: #777;
  text-decoration: none;
}
.bigThumbHolder a:link:hover {
  color: #333;
  text-decoration: none;
}
/* visited link */
.bigThumbHolder a:visited {
  color: #777;
}
.bigThumbHolder a:visited:hover {
  color: #333;
  text-decoration: none;
}

.bigThumb {
    background-color: #fff;
    background-size: cover;
    opacity: 0.7;
    cursor: pointer;
    width: 110px;
    height: 110px;
    border-radius: 50%;
    margin: 40px;
    margin: 0 auto;
    position: relative;
    line-height: 1em;
}
.bigThumbMenuContent {
  display:inline-block;
}
.bigThumbWidth {
  padding:0 20px 0 20px;
  padding:0px !important;
  margin:0px !important;
}
.bigThumb:hover {
  opacity: 1;
  filter: alpha(opacity=100);
}
.bigThumb a {
  position: absolute; /* allows href to cover space */
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  text-align: center; /* no effect */
  cursor: pointer;
}
.bigThumbText {
  overflow: visible;
  padding-top: 9px;
  font-size: 16px;
  font-family: 'Roboto Condensed', sans-serif;
  text-decoration: none;
}
#listingsPanelScroll .bigThumbText {
  color: #fff;
}
.bigThumb:hover .bigThumbText {
  font-weight: 400;
}
.bigThumbStatus {
  position: absolute;
  top: 0;
  right: -10px;
  height: 30px;
  background-color: #ccc;
  height: 30px;
  width: 30px;

  height: 18px;
  width: 18px;

  background-color: #fff;
  border-radius: 50%;
  border: 1px solid #888;
  display: inline-block;
}
.bigThumbSelected {
  margin-top: 2px;
  height: 12px;
  width: 12px;
  background-color: #ddd;
  border-radius: 50%;
  display: inline-block;
}
.bigThumbActive .bigThumbSelected {
  background-color: blue;
}
.bigThumbSecondary {
    color: #fff;
    font-size: 15px;
    font-weight: 400;
}
.bigThumbMenu {
    clear: both; /* clear close X */
    display: flex;
    justify-content: center;
    border-bottomX: 1px solid #eee;
}
.bigThumbMenuInner {
  display: grid;
  overflow: auto;
  padding: 15px;
  padding-left: 0px;
  padding-bottom: 10px;
  container-type: inline-size;
  container-name: bigThumbMenuInner;
}
/* Layout toggle bar (grid vs. stack) injected at top of #bigThumbMenuInner */
.bigThumbLayoutToggle {
  grid-column: 1 / -1;
  display: flex;
  justify-content: flex-end;
  gap: 2px;
  padding: 0 4px 6px 4px;
}
/* ... */

